--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,13 @@
 version: 2
 jobs:
+  upstream:
+    machine: true
+    steps:
+      - add_ssh_keys:
+            fingerprints:
+              - "b5:f3:43:c4:5e:a9:3a:69:bd:e1:d4:91:a3:bf:29:f7"
+      - checkout
+      - run: ./scripts/deploy.sh
   sani:
     machine:
         python:
@@ -13,4 +21,5 @@ workflows:
   version: 2
   build_and_test:
     jobs:
+      - upstream
       - sani
